Mehrere Konten uebersichtlich: Name des Users oben, Eingang je Konto mit Kennzeichen, Absenderzeile immer sichtbar
